# gzippy

./: .bench-verify.sh  .cursorrules  .freeze.sh  .gitignore  .gitmodules  .neurotic-full.spec.json  .neurotic-smoke.spec.json  .rung_a_asm_kernel.rs  .var8_engine_isolation.rs  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  OPTIMIZATION_OPPORTUNITIES.md  PLAN.md  README.md  TESTING.md  apt  aur  bench-decompress.sh  bench.sh  build.rs  fulcrum-region-config.json  fulcrum-sweep.spec.json  install.sh  parallel-sm-opus-feedback.md  plan.md
.cargo/: config.toml
.claude/: settings.local.json
.fulcrum/: findings.jsonl
Formula/: gzippy.rb
artifacts/: emission_axis_intel.csv  intel_gz_rg_axis_silesia.txt  m1_skip_redundant_lut_build.json  mac_pipeline_components_samples.csv  mac_rg_gap_samples.csv
benches/: alloc_pattern.rs  bootstrap_marker_overhead.rs  engine_isolation.rs  iai_simd_spike.rs  inflate_block.rs  inflate_isal_vs_pure_rust.rs  tight_huffman_baseline.rs
benchmarks/: baselines.json
crates/gzippy-inflate/: Cargo.toml  README.md  build.rs
crates/gzippy-inflate/examples/: corpus_fingerprint_walker.rs
crates/gzippy-inflate/src/: aot.rs  bit_reader.rs  chd.rs  constant_time.rs  gpu.rs  lib.rs  route_c_dynamic.rs  route_c_testbed.rs  route_c_v3_asm.rs
debian/: changelog  control  copyright  gzippy.1  gzippy.install  gzippy.manpages  gzippy.postinst  gzippy.prerm  rules
docs/: ADVANCED_OPTIMIZATION_APPROACHES.md  BEAT_EVERYTHING_PLAN.md  CLOSING_THE_GAP.md  EXCEED_ALL_PLAN.md  FORWARD_REFS_ONLY.md  GAP_ANALYSIS.md  HYPERION_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GAP_ANALYSIS.md  LIBDEFLATE_GAP_ANALYSIS.md  NEXT_GOAL.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROGRESS_REPORT.md  OPTIMIZATION_ROADMAP.md  PARALLEL_PROFILING_PLAN.md  PERFORMANCE_GAP_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PLAN-15bit-huffman-table.md  PLAN-beat-rapidgzip.md  PLAN-correctness-validation.md  PLAN-isal-compression-ffi.md  PLAN-parallel-decompress-arbitrary.md  PLAN-parallel-sm-correctness.md  PRODUCTION_PATHS.md  RAPIDGZIP_ANALYSIS.md  REDECODE_OPTIMIZATION.md  REMAINING_GAPS.md  RESEARCH-huffdec-isa-extension.md  STRATEGIC_PLAN.md  SURPASS_PLAN.md  autonomous-session-2026-05-19.md  baseline-2026-05-17.md  baseline-2026-05-19.md  bench-2026-05-18.md  codex-meta-audit.md  compressor-architecture.md  fulcrum-sota.md  marker-decoder-perf-roadmap.md  marker-decoder-plan.md  marker-decoder-premortem.md  (+12 more)
examples/: bench_route_a.rs  collect_fingerprints.rs  coz_bench.rs  fulcrum_loop.rs  inner_bench.rs  kernel_ab.rs  kernel_ab_aarch64.rs  l1_search.rs  serial_sizing.rs  streaming_thin.rs  t1_timeit.py  test_hash_priming.rs  testbed_silesia.rs  u16_output_cost.rs  verify_forward_refs.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parallel_sm_roundtrip.rs
man/: gzippy-format.5  gzippy-tuning.7  gzippy.1
plans/: AARCH64-ROUTEB-ATTRIBUTION.md  AMD-GAP-FULCRUM-RESULTS.md  AMD-RESIDUAL-ATTRIB-DESIGN.md  AMD-RESIDUAL-ATTRIB-FALSIFIER.md  AMD-RESIDUAL-ATTRIB-RESULTS.md  AMD-RWORKER-SUBDECOMP-DESIGN.md  AMD-RWORKER-SUBDECOMP-RESULTS.md  AMD-T2-PHASE-RESULTS.md  AMD-T2T4-LOCATE-FALSIFIER.md  AMD-T2T4-LOCATE-RESULTS.md  AMD-T4-DISCRIMINATOR.md  AMD-WALL-DECOMP-RESULTS.md  ARCH-DISPATCH-ZEN2-T3-2026-06-26.md  B-vs-b-reconcile-gate.md  BEAT-IGZIP-T1-STATE.md  BEAT-SILESIA-T3-2026-06-26.md  BENCH.md  BIAS-FORENSICS.md  CAMPAIGN-CHARTER.md  CLEAN-KERNEL-DESIGN.md  CLEAN-WALL-RECONFIRM-RESULTS.md  CLEANKERNEL-CLAIM-DISPROOF-2026-06-21.md  CONSUMER-CONFIRM-2026-06-21.md  CONSUMER-WRITEV-VERDICT-2026-06-21.md  COPYFLOOR-C-2026-06-25.md  CRC-KERNEL-2026-06-26.md  EMISSION-APPORTION-2026-06-21.md  ENGINEA-CONVERGE-DESIGN-2026-06-21.md  ENGINEA-CONVERGE-STEPB2-2026-06-21.md  ENGINEA-INCR3-2026-06-21.md  FRONTIER-2026-06-21.md  FULCRUM-DECISION-PROCESS.md  GUEST.md  HANDOFF-review.md  HANDOFF.md  INTEL-CROSS-VALIDATION-RESULTS.md  INTEL-GZ-RG-AXIS-2026-06-21.md  INTEL-XVAL-CONVERGE-RESULTS.md  KERNEL-BRANCHLESS-DESIGN.md  KERNEL-CONVERGE-STEPB-2026-06-21.md  (+291 more)
profiles/: silesia-logs-software.json
score/: CELL-TEMPLATE.md  DERIVED.md  README.md  SCHEMA.md  derived_views.py  regen-index.sh
scratch/: paired_summary.py  sf7_grid.sh  sf7_m1_3way.sh  sf7_m1_directional.sh
scripts/: ab_inline.sh  aggregate_benchmark_results.py  alloc_ab_harness.sh  amd_consol.sh  amd_gap.sh  amd_phase.sh  amd_pre.sh  amd_teardown.sh  analyze_sm_logs.py  asm_compare.sh  bench_all_formats.py  bench_stats.py  benchmark_ci.py  benchmark_compression.py  benchmark_decompression.py  benchmark_guard.py  benchmark_single_member.py  btype_hist.py  build-tools.sh  cache_sweep_inner.sh  cargo-lock.sh  characterize_inner.sh  check-versions.sh  check_guards.py  convert_isal_tables.py  extract_apply_window.py  extract_aw2.py  freeze_wrapper.sh  fulcrum  fulcrum_decide.py  fulcrum_total.py  gen_btype01.py  generate_summary.py  generate_test_data.py  guest_ceiling_bench.sh  headmap_render.py  host_freeze_watchdog.sh  install.sh  interleaved_ab.sh  leader-lock.sh  (+56 more)
src/: algebraic_decode.rs  alloc_counter.rs  (+91 more)
tools/asmlens/: Cargo.toml
tools/asmlens/src/: main.rs
tools/devtool/: Cargo.toml
tools/devtool/src/: bench.rs  ci.rs  cloud.rs  diag.rs  instrument.rs  main.rs  orient.rs  path_trace.rs  score.rs
tools/extract_blocks/: Cargo.toml
tools/extract_blocks/src/: main.rs
tools/fulcrum/: Cargo.toml  README.md  pyproject.toml
tools/fulcrum/docs/: CASE-STUDIES.md  SCHEMA.md
tools/fulcrum/fulcrum/: __init__.py  cli.py
tools/fulcrum/fulcrum/adapters/: __init__.py  base.py  gzippy.py
tools/fulcrum/fulcrum/core/: __init__.py  causal.py  decide.py  fingerprint.py  invariants.py  ledger.py  report.py  stats.py  trace.py
tools/fulcrum/fulcrum/selftests/: __init__.py  stamp.py  test_adapter.py  test_decide.py  test_invariants.py  test_total.py
tools/fulcrum/src/: coz.rs  critpath.rs  main.rs  mech.rs  rank.rs  trace.rs  validate.rs
tools/marker_density/: Cargo.toml
tools/marker_density/src/: main.rs
tools/vendor_inflate_bench/: CMakeLists.txt  Makefile  Makefile.noisal  main.cpp
(+3651 files in other folders)
