[workspace]
members = ["crates/gzippy-inflate"]
resolver = "2"

[package]
name = "gzippy"
version = "0.8.0"
edition = "2021"
description = "The fastest parallel gzip. Drop-in replacement for gzip and pigz, and a Rust library."
license = "Zlib"
repository = "https://github.com/jackdanger/gzippy"
homepage = "https://github.com/jackdanger/gzippy"
documentation = "https://docs.rs/gzippy"
readme = "README.md"
keywords = ["gzip", "compression", "parallel", "pigz", "zlib"]
categories = ["compression", "command-line-utilities"]
authors = ["Jack Danger Canty"]
build = "build.rs"
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
    "rust-toolchain.toml",
]

[lib]
name = "gzippy"
path = "src/lib.rs"

[[bin]]
name = "gzippy"
path = "src/main.rs"

[features]
default = []
isal = []  # ISA-L decompression (enabled by build.rs when static lib is built)
isal-compression = ["isal-rs", "arena-allocator"]  # ISA-L + parallel SM chunk arenas
trace = []  # Enable decode tracing instrumentation
profile = []  # Enable timing profiler (adds overhead, only use for profiling)
debug_decode = []  # Log decode operations around DEBUG_POS (e.g., DEBUG_POS=124088477)
counters = []     # Enable AtomicU64 hot-path counters in bgzf (always on in test builds)
# Compile vendored C zopfli for the corpus oracle test that compares
# zopfli_pure deflate output byte-for-byte against the C reference.
# Only consumed by `cargo test --features oracle` (or `make oracle-vs-c`);
# does not affect production binaries. See plan.md Phase 11.2.
oracle = []
# Pure-Rust resumable inflate with stopping points (Track B); no ISA-L in wrapper body.
pure-rust-inflate = ["arena-allocator"]
arena-allocator = ["dep:allocator-api2", "dep:rpmalloc-sys"]
# Activates `#[global_allocator] = rpmalloc::RpMalloc` in src/main.rs.
# Test for the "pipeline idle is allocator contention" hypothesis.
global-rpmalloc = ["dep:rpmalloc"]
libdeflate = []
streaming-libdeflate-rs = ["dep:streaming-libdeflate-rs"]
dynasm = ["dep:dynasm"]
dynasmrt = ["dep:dynasmrt"]
# Route C: per-block hand-written x86_64 assembly inflate via dynasm-rs
# (plans/unified-decoder.md §3.1 / §4.3 / §5.1). x86_64-only for v1.
route-c-dynasm = ["dynasm", "dynasmrt"]

[dependencies]
# Compression: flate2 with zlib-ng for maximum performance
# zlib-ng is a modernized fork with SIMD optimizations (2-3x faster)
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] }

# Decompression: libdeflater provides Rust bindings to libdeflate
# (30-50% faster than zlib for in-memory operations)
libdeflater = "1.0"
# Low-level bindings for _ex functions (returns consumed bytes)
libdeflate-sys = "1.0"
# zlib-ng low-level API: inflatePrime for non-byte-aligned restart (parallel arm64)
libz-ng-sys = "1"

# ISA-L compression (optional, for fastest L0-L3 on x86)
isal-rs = { version = "0.5", optional = true }

# CLI and utilities
walkdir = "2.4"
filetime = "0.2"
num_cpus = "1.16"

# Memory-mapped I/O for zero-copy file access
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CRC32 (hardware-accelerated on ARM/x86)
crc32fast = "1.4"

# SIMD-accelerated byte searching (for fast gzip header detection)
memchr = "2.7"

# System utilities
core_affinity = "0.8"
libc = "0.2"
allocator-api2 = { version = "0.2", optional = true }
rpmalloc-sys = { version = "0.2", optional = true }
# Global rpmalloc allocator — vendor parity test. Gated behind
# `global-rpmalloc` feature; only activated for the perf experiment.
rpmalloc = { version = "0.2", optional = true }
streaming-libdeflate-rs = { version = "0.2", optional = true }
dynasm = { version = "5", optional = true }
dynasmrt = { version = "5", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] }
gzippy-inflate = { path = "crates/gzippy-inflate", features = ["route-c-dynasm"] }
# Phase 0.6 spike: iai-callgrind for SIMD-fidelity test.
# See plans/inner-loop-execution.md Phase 0.6.
iai-callgrind = "0.13"
# Phase 1.2 microbench harness.
criterion = "0.5"

[[bench]]
name = "inflate_isal_vs_pure_rust"
harness = false
required-features = ["isal-compression"]

[[bench]]
name = "bootstrap_marker_overhead"
harness = false
required-features = ["pure-rust-inflate"]

[[bench]]
name = "iai_simd_spike"
harness = false

[[bench]]
name = "inflate_block"
harness = false
required-features = ["pure-rust-inflate"]

[[bench]]
name = "tight_huffman_baseline"
harness = false
required-features = ["pure-rust-inflate"]

[profile.release]
lto = "fat"           # Full cross-crate LTO (slower build, faster binary)
codegen-units = 1     # Single codegen unit for maximum optimization
panic = "abort"       # Smaller binary, no unwinding overhead
opt-level = 3         # Maximum optimization
strip = true          # Remove symbols for smaller binary

# iai-callgrind requires debug symbols to find its instrumented sentinels;
# the stripped release profile breaks it. Keep release-grade optimization
# but retain full debug info for cachegrind output parsing.
# LTO disabled here because iai-callgrind's sentinel-finder doesn't work
# well with fat LTO (sentinels can be merged across translation units).
[profile.bench]
inherits = "release"
strip = false
debug = true
lto = false

# Enable native CPU optimizations when building locally
# (commented out for portable binaries - uncomment for max local perf)
# [build]
# rustflags = ["-C", "target-cpu=native"]

# Patched isal-sys from vendor/isal-rs (JackDanger/isal-rs branch
# gzippy-stopping-points). C source via ISAL_SOURCE=vendor/isa-l (.cargo/config.toml).
# See packaging/isal-patches/.
[patch.crates-io]
isal-sys = { path = "vendor/isal-rs/isal-sys" }
