[package]
name = "gzippy-dev"
version = "0.1.0"
edition = "2021"
description = "Development tool for gzippy - CI monitoring, benchmarking, gap analysis"

[[bin]]
name = "gzippy-dev"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
manual_range_contains = "allow"

[profile.release]
opt-level = 2
